# TuringMachine

./: README.md
TuringMachineCPP/: 5state.yaml  6state.yaml  TuringMachine.cpp  TuringMachine.h  TuringMachineCPP.sln  TuringMachineCPP.vcxproj  TuringMachineCPP.vcxproj.filters  main.cpp  test.yaml
turing_machine/: .gitignore  Cargo.toml
turing_machine/benches/: my_benchmark.rs
turing_machine/src/: main.rs  turing_machine.rs
turing_machine_c/: main.c  turing_machine_c.c  turing_machine_c.h  turing_machine_c.sln  turing_machine_c.vcxproj  turing_machine_c.vcxproj.filters
