[package]
name = "turing_machine"
version = "0.1.0"
authors = ["Emualluig <Emualluig@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#yaml-rust = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
