[package]
name = "turing_machine"
version = "0.1.0"
authors = ["Emualluig <Emualluig@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
criterion = "0.3"

[profile.bench]
opt-level = 3
debug = 0
panic = "abort"
codegen-units = 1
debug-assertions = false
overflow-checks = false
lto = true

[[bench]]
name = "my_benchmark"
harness = false
